--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 
 #guessWord {
     display: inline-block;
-    font-size: 6em;
+    font-size: 10em;
+    margin-top: 1em;
 }
 #btnShow {
     display: inline-block;
