--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,16 @@
     text-align: center;
 }
 
+#playTime {
+    display: none;
+}
+
+#fetchingData {
+    display: inline-block;
+    font-size: 10em;
+    margin-top: 1em;
+}
+
 #guessWord {
     display: inline-block;
     font-size: 10em;
